VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc24Up.err
[8MB/455.1MB][  1%][>                                                 ][2MB/s]  [16MB/455.1MB][  3%][=>                                                ][2.286MB/s]  [24MB/455.1MB][  5%][==>                                               ][2.182MB/s]  [32MB/455.1MB][  7%][===>                                              ][1.778MB/s]  [40MB/455.1MB][  8%][====>                                             ][1.739MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][1.846MB/s]  [56MB/455.1MB][ 12%][======>                                           ][1.806MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][1.684MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][1.714MB/s]  [80MB/455.1MB][ 17%][========>                                         ][1.702MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][1.725MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][1.714MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][1.733MB/s]  [112MB/455.1MB][ 24%][============>                                     ][1.723MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][1.69MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][1.62MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][1.581MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][1.548MB/s]  [152MB/455.1MB][ 33%][================>                                 ][1.49MB/s]  [160MB/455.1MB][ 35%][=================>                                ][1.333MB/s]  [168MB/455.1MB][ 36%][==================>                               ][1.254MB/s]  [176MB/455.1MB][ 38%][===================>                              ][1.205MB/s]  [184MB/455.1MB][ 40%][====================>                             ][1.157MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][1.157MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][1.143MB/s]  [208MB/455.1MB][ 45%][======================>                           ][1.137MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][1.137MB/s]  [224MB/455.1MB][ 49%][========================>                         ][1.137MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][1.143MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][1.132MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][1.127MB/s]  [256MB/455.1MB][ 56%][============================>                     ][1.128MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][1.119MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][1.097MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][1.077MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][1.059MB/s]  [296MB/455.1MB][ 65%][================================>                 ][1.035MB/s]  [304MB/455.1MB][ 66%][=================================>                ][1.02MB/s]  [312MB/455.1MB][ 68%][==================================>               ][1011kB/s]  [320MB/455.1MB][ 70%][===================================>              ][996kB/s]  [328MB/455.1MB][ 72%][====================================>             ][1006kB/s]  [336MB/455.1MB][ 73%][====================================>             ][1018kB/s]  [344MB/455.1MB][ 75%][=====================================>            ][1015kB/s]  [352MB/455.1MB][ 77%][======================================>           ][1007kB/s]  [360MB/455.1MB][ 79%][=======================================>          ][1013kB/s]  [368MB/455.1MB][ 80%][========================================>         ][1024kB/s]  [376MB/455.1MB][ 82%][=========================================>        ][1.003MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][1.005MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][1024kB/s]  [400MB/455.1MB][ 87%][===========================================>      ][1011kB/s]  [408MB/455.1MB][ 89%][============================================>     ][997.1kB/s]  [416MB/455.1MB][ 91%][=============================================>    ][1002kB/s]  [424MB/455.1MB][ 93%][==============================================>   ][1003kB/s]  [432MB/455.1MB][ 94%][===============================================>  ][1001kB/s]  [440MB/455.1MB][ 96%][================================================> ][999kB/s]  [448MB/455.1MB][ 98%][=================================================>][997.3kB/s]  [455.1MB/455.1MB][100%][==================================================][997.9kB/s]  [455.1MB/455.1MB][100%][==================================================][997.9kB/s]  
In file included from input_line_8:1:
/pool/condor/dir_24949/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_24949/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
